--- a/_posts/thesis_chapters/2024-10-5-Design.md
+++ b/_posts/thesis_chapters/2024-10-5-Design.md
@@ -45,6 +45,7 @@ title: 5. Exploration of the Formative Learning Design Process
             -   [Level design and
                 prototyping](#level-design-and-prototyping)
             -   [Use of game assets](#use-of-game-assets)
+                -   [Simple block graphics](#simple-block-graphics)
             -   [Distributed approach to asset
                 creation](#distributed-approach-to-asset-creation)
         -   [Resolution of C1 / LINK](#resolution-of-c1-link)
@@ -52,46 +53,39 @@ title: 5. Exploration of the Formative Learning Design Process
         of
         documentation](#c2---contradictions-associated-with-project-navigation-and-use-of-documentation)
         -   [Description of contradictions related to
-            docs](#description-of-contradictions-related-to-docs)
+            documentation](#description-of-contradictions-related-to-documentation)
         -   [Quick Start Cards](#quick-start-cards)
-        -   [Structuring instructional tutorial
-            chapters](#structuring-instructional-tutorial-chapters)
-        -   [Code snippet examples](#code-snippet-examples)
-        -   [Theming the a collection of game design patterns to aid
-            navigation](#theming-the-a-collection-of-game-design-patterns-to-aid-navigation)
+        -   [Structuring instructional tutorial resources and code
+            snippets](#structuring-instructional-tutorial-resources-and-code-snippets)
         -   [Resolution of C2](#resolution-of-c2)
     -   [C3 - Responding to tensions and barriers in cultural aspects of
         the game making
         activity](#c3---responding-to-tensions-and-barriers-in-cultural-aspects-of-the-game-making-activity)
         -   [Social coding processes](#social-coding-processes)
-            -   [What kind of Maker are you - Motivations behind social
-                processes (emerging in
-                playtesting)](#what-kind-of-maker-are-you---motivations-behind-social-processes-emerging-in-playtesting)
+            -   [Remixing, peer learning, and choice of starting
+                template MERGE
+                UP](#remixing-peer-learning-and-choice-of-starting-template-merge-up)
             -   [Use of side missions to encourage varied creative
                 practices](#use-of-side-missions-to-encourage-varied-creative-practices)
     -   [Chapter Discussion](#chapter-discussion)
-        -   [Summary of evolution of learning design tools and
-            processes](#summary-of-evolution-of-learning-design-tools-and-processes)
-        -   [Discussion: locating the ethos of game template and core
-            tools with other
-            research](#discussion-locating-the-ethos-of-game-template-and-core-tools-with-other-research)
-        -   [Authenticity and Agency in tool
-            used](#authenticity-and-agency-in-tool-used)
-            -   [Increased scaffolding of tools can increase
-                instrumental agency but at what
-                cost?](#increased-scaffolding-of-tools-can-increase-instrumental-agency-but-at-what-cost)
-            -   [The potentially awesome impact of lifting the lid on
-                authentic
-                technologies](#the-potentially-awesome-impact-of-lifting-the-lid-on-authentic-technologies)
-            -   [Remixing, peer learning, and choice of starting
-                template](#remixing-peer-learning-and-choice-of-starting-template)
-        -   [Expressing the key features of this design narrative using
-            the argumentative grammar of
-            3GAT](#expressing-the-key-features-of-this-design-narrative-using-the-argumentative-grammar-of-3gat)
-        -   [Link to next chapter](#link-to-next-chapter)
-            -   [Returning to discussion the emergent and mutual nature
-                of the design and what it has to say about participant
-                agency](#returning-to-discussion-the-emergent-and-mutual-nature-of-the-design-and-what-it-has-to-say-about-participant-agency)
+        -   [On Affordances, DS and DBR (argumentative grammar of 3GAT /
+            DBR)](#on-affordances-ds-and-dbr-argumentative-grammar-of-3gat-dbr)
+            -   [Summary of evolution of learning design tools and
+                processes (specifically in relation to constructionist
+                principles)](#summary-of-evolution-of-learning-design-tools-and-processes-specifically-in-relation-to-constructionist-principles)
+                -   [The potentially awesome impact of lifting the lid
+                    on authentic technologies
+                    -](#the-potentially-awesome-impact-of-lifting-the-lid-on-authentic-technologies--)
+                -   [Comparing to Microworlds & constructionist design
+                    priniciples](#comparing-to-microworlds-constructionist-design-priniciples)
+        -   [**Emergence of GDPs as a germ cell of
+            activity**](#emergence-of-gdps-as-a-germ-cell-of-activity)
+            -   [Synthesis effect of UMC + collection of
+                GDPS](#synthesis-effect-of-umc-collection-of-gdps)
+            -   [and what this synthesis has to say about participant
+                agency
+                -](#and-what-this-synthesis-has-to-say-about-participant-agency--)
+        -   [Link to next chapter/s](#link-to-next-chapters)
     -   [Parking Lot](#parking-lot)
         -   [Developing Digital Literacy skills / Fluency -
             OPERATIONS](#developing-digital-literacy-skills-fluency---operations)
@@ -105,7 +99,6 @@ title: 5. Exploration of the Formative Learning Design Process
             5](#shared-object-as-gdp-move-to-ch-5)
         -   [Perhaps reintegrate above](#perhaps-reintegrate-above)
         -   [Operations / fluidity](#operations-fluidity)
-
 # Exploration of the Formative Learning Design Process
 
 ## Research Questions - April 2024
@@ -968,46 +961,13 @@ The impact of social missions and playtesting are described in more detail in ch
 
 This chapter has explored the complexity of the interacting tools and documentation in relation to their authenticity and impact on participant experiences.
 
+IS THIS USEFUL HERE? LATER? NEXT CHAPTER?
 RQ2 addresses uses the term computational fluency, which as explored in chapter 2, is a better fit for the aims of this study than computational thinking, given the former's increased focus on agency and a more concrete, accessible approach.  
-
-
-
-#### As part of the intro summary of the key features of this design narrative using the argumentative grammar of 3GAT / DBR
-
-<!-- - Affordances outlined in this learning design  double stimulation, give a quick summary, different types of agency   -->
-WHAT IS THIS REALLY ADDING?
-
-In returning to the role of 3GAT concepts in outlining the argumentative grammar of this design, the following section expresses some of the key features of the design narrative.
-
-
-
-The adaptations of to these tools can be conceived of as increasing instrumental agency by removing the need to understand concepts or use tools which were beyond the skill level of the participants.
-IS THIS EXPRESSED ELSE WHERE?
-
-This can be expressed as revising toolsets to effective mediation practices by addressing emerging tensions, in an
-
-These strategies can be seen pedagogy built around a sets of design affordances that fitting a DBR approach,
-
-Affordances can be viewed through a 3GAT lens as secondary stimuli.
-
-The meditational strategies, which emerged were not familiar to me before the start of this research, but after some research, exist in relevant research -
-e.g.  UMC literature, and half baked games, and constructionst design
-
-
-
-Also relational agency developed, supported by playtesting ans social coding processes.
-
-Other tensions were resolved with more fundamental shifts to the overall structure of the activity which can be said to align more closely with the concept of transformative (authorial agency)  agency.
-
-**Emergence of GDPs as a germ cell of activity**
-
-For this learning design, the concept and pedagogy of working with game design patterns emerged not only as an object of activity on a more granular scope than typical, but also as guiding germ cell concept which helps participant and facilitators. In the discussion below, GDPs are noted in their use in step-wise instruction processes, (and are also the topic of Chapter 6.)
 
 LINK
 
 This chapter has by focusing on first technical and then more social dimensions of the learning design, (re)surfaced the many barriers to achieving computational fluency via the text coding of a multi-media project. The next section begins by discussing how authentic tools and processes, while challenging for novices, can be addressed using existing of key design principles. It then provides a summary of the designs approach to try to address these tensions in relation to existing research, in particular UMC, half-baked games and  constructionist design principles.
 
-### Summary of evolution of learning design tools and processes (specifically in relation to constructionist principles)
 
 <!-- At some point in this process I realised that I wanted to encourage the growth of computational fluency.
 
@@ -1023,7 +983,44 @@ That was not clear, the use of computational thinking also jumped out from a sen
 
 While computational fluency is a valid of the objectives of the game making activity goal, this chapter has (re)surfaced the many barriers to achieving this via the text coding of a multi-media project. -->
 
-#### The potentially awesome impact of lifting the lid on authentic technologies -
+
+### On Affordances, DS and DBR (argumentative grammar of 3GAT / DBR)
+
+<!-- - Affordances outlined in this learning design  double stimulation, give a quick summary, different types of agency   -->
+WHAT IS THIS REALLY ADDING?
+
+In returning to the role of 3GAT concepts in outlining the argumentative grammar of this design, the following section expresses some of the key features of the design narrative.
+
+**Returning to discussion the  emergent and mutual nature of the design - inline with DBR principles**
+
+My role to encourage a learning environment which met the following characteristics via changes in learning design has been explored in this chapter via a detailed exploration of tensions arising, changes and inherrent motivations.
+
+
+This can be expressed as revising toolsets to effective mediation practices as an iterative process, aligned with even broad definitions of DBR
+
+These strategies can be seen pedagogy built around a sets of design affordances that fitting a DBR approach,
+
+In line with discussion of Chapter 3, this process is augmented by adding argumentative grammar of AT incluing anaysis of emerging tensions between systems elements, focus on double stimulation and its relation to participant agency, and the process of rising to the concrete through exploration of a germ cell concept.
+
+
+**agency**
+
+The adaptations of to these tools can be conceived of as increasing instrumental agency by removing the need to understand concepts or use tools which were beyond the skill level of the participants.
+IS THIS EXPRESSED ELSE WHERE?
+
+Affordances can be viewed through a 3GAT lens as secondary stimuli.
+
+The meditational strategies, which emerged were not familiar to me before the start of this research, but after some research, exist in relevant research -
+e.g.  UMC literature, and half baked games, and constructionst design
+
+Also relational agency developed, supported by playtesting ans social coding processes.
+
+Other tensions were resolved with more fundamental shifts to the overall structure of the activity which can be said to align more closely with the concept of transformative (authorial agency)  agency.
+
+
+#### Summary of evolution of learning design tools and processes (specifically in relation to constructionist principles)
+
+##### The potentially awesome impact of lifting the lid on authentic technologies -
 
 One of the differences is in authenticity...
 
@@ -1047,7 +1044,7 @@ PERHAPS via some ADDITION TO A TABLE AT THE END OF CHATP#### Different black box
 <!-- This is a long-running theme of constructionist research, with roots in Papert concept of Microworlds, typically embodied by the Mathland environment, where participants control a robotic turtle with lines of simplified LOGO code language.  Because the turtle speaks only LOGO, children are drawn to speak LOGO to progress. Thus, Scratch and Mircoworlds can be seen as digital playgrounds with affordances that encourage certain types of play. -->
 
 
-#### Comparing to Microworlds & constructionist design priniciples
+##### Comparing to Microworlds & constructionist design priniciples
 
 The process of modification of the starter template, foregrounding key affordances, together with the restricted tool choice of a code playground and pixel art editor with the authentic, yet scaffolded approach of both tools can be compared to the constructionism-informed design decisions made in creating a Microworld environment.
 
@@ -1077,11 +1074,15 @@ Increased scaffolding of learner resources and tools can increase instrumental a
 
 
 
-#### Synthesis effect of UMC + collection of GDPS
 
-Small code changes resulted in potentially large changes in game behaviour, appearance and difficulty aligns with a long standing concept of HCI research that feedback is motivating for system users [@bernhaupt_introduction_2015; @malone_heuristics_1982].  The use of a starting template was inline with core motivations of UMC technique, namely, to build familiarity with the code structure, and confidence in use of tools in an accelerated way.
+### **Emergence of GDPs as a germ cell of activity**
 
-As explored above, the shift in template design from P1 to P2 involved a more structured approach in for participants in use and modify stages where key affordances were highlighted in the code design.
+The process of rising to the concrete in CHAT is complex, and not seen as a requirement for formative interventions [Sannino etc]. However, viewed as powerful in potential. To try to acheive it, the researcher engages in an exploration of complex, messy concrete processes is undertaken over time to try to discern overarching concerns which can be expressed as a prototypical abstract germ cell concept.
+The resulting utilit of this germ cell is then in its application in different settings, or scopes of activity.
+
+<!-- NOTE Blunden and Engestrom's disagreement about unit of analysis -->
+
+For this learning design, the concept and pedagogy of working with game design patterns emerged not only as an object of activity on a more granular scope than typical, but also as guiding germ cell concept which helps participant and facilitators. In the discussion below, GDPs are noted in their use in step-wise instruction processes, (and are also the topic of Chapter 6.)
 
 
 **Comparing to Stepwise approaches**
@@ -1112,22 +1113,30 @@ OPEN THE DOOR HERE - AND POINT TO THE NEXT CHAPTER RATHER THAN TACKLING IT ALL.
 <!-- NOTE - DROP - MAKE MORE DIRECT
 While the scope of this study is not on the micro-level of tool use, it is useful to collate some broad observations from my journal notes and video data on how participants used the new tools introduced. This is done in relation dimensions of complexity exposed in research on educational coding tools. -->
 
-### Link to next chapter
 
 
-#### Returning to discussion the  emergent and mutual nature of the design and what it has to say about participant  agency
+#### Synthesis effect of UMC + collection of GDPS
+
+Small code changes resulted in potentially large changes in game behaviour, appearance and difficulty aligns with a long standing concept of HCI research that feedback is motivating for system users [@bernhaupt_introduction_2015; @malone_heuristics_1982].  The use of a starting template was inline with core motivations of UMC technique, namely, to build familiarity with the code structure, and confidence in use of tools in an accelerated way.
+
+As explored above, the shift in template design from P1 to P2 involved a more structured approach in for participants in use and modify stages where key affordances were highlighted in the code design.
 
 
+
+####  and what this synthesis has to say about participant  agency -
+
+And this has a knock on effect on the increase use of social coding processes, as the increased instrumental agency can be seen as the base of a triangular hierarchy of agency. One level may  needs to be built on the other.
+
+MOVE THOSE OBSERVATIONS HERE.
 <!-- LATER? My choices balanced the value of positive engagement of asset creating, development of digital literacy skills associated with web production, and a focus on promoting code modification.   -->
-
-
-My role to encourage a learning environment which met the following characteristics via changes in learning design has been explored in this chapter via a detailed exploration of tensions arising, changes and inherrent motivations.
 
 Agency in this learning process was present via the input of participants in the changing design of the program. At times through direct requests, at times through my responses to behaviours demonstrating their needs and motivations.
 
 Playtesting as a process and the use of GDPs in varied ways by participants was noticed and I added more affordences designed to facilitate these aspects. Affordances here as a form of delegated agency.
 
 Chapter 7 explores the delivery and start to explore the impact of the and emerging community processes on cultural dimensions of the game making activity on participants development of agency.
+
+### Link to next chapter/s
 
 This chapter has dealt with the evolution of design in initial phases and responses to learner experience to resolve tensions. A key focus of this chapter has been  barriers to computer coding and use of particular software. I have explored alignment with the results research from the constructionist school.
 
