--- a/_posts/thesis_chapters/tocs/2024-10-5-Design.md_toc.md
+++ b/_posts/thesis_chapters/tocs/2024-10-5-Design.md_toc.md
@@ -33,6 +33,7 @@
             -   [Level design and
                 prototyping](#level-design-and-prototyping)
             -   [Use of game assets](#use-of-game-assets)
+                -   [Simple block graphics](#simple-block-graphics)
             -   [Distributed approach to asset
                 creation](#distributed-approach-to-asset-creation)
         -   [Resolution of C1 / LINK](#resolution-of-c1-link)
@@ -40,46 +41,39 @@
         of
         documentation](#c2---contradictions-associated-with-project-navigation-and-use-of-documentation)
         -   [Description of contradictions related to
-            docs](#description-of-contradictions-related-to-docs)
+            documentation](#description-of-contradictions-related-to-documentation)
         -   [Quick Start Cards](#quick-start-cards)
-        -   [Structuring instructional tutorial
-            chapters](#structuring-instructional-tutorial-chapters)
-        -   [Code snippet examples](#code-snippet-examples)
-        -   [Theming the a collection of game design patterns to aid
-            navigation](#theming-the-a-collection-of-game-design-patterns-to-aid-navigation)
+        -   [Structuring instructional tutorial resources and code
+            snippets](#structuring-instructional-tutorial-resources-and-code-snippets)
         -   [Resolution of C2](#resolution-of-c2)
     -   [C3 - Responding to tensions and barriers in cultural aspects of
         the game making
         activity](#c3---responding-to-tensions-and-barriers-in-cultural-aspects-of-the-game-making-activity)
         -   [Social coding processes](#social-coding-processes)
-            -   [What kind of Maker are you - Motivations behind social
-                processes (emerging in
-                playtesting)](#what-kind-of-maker-are-you---motivations-behind-social-processes-emerging-in-playtesting)
+            -   [Remixing, peer learning, and choice of starting
+                template MERGE
+                UP](#remixing-peer-learning-and-choice-of-starting-template-merge-up)
             -   [Use of side missions to encourage varied creative
                 practices](#use-of-side-missions-to-encourage-varied-creative-practices)
     -   [Chapter Discussion](#chapter-discussion)
-        -   [Summary of evolution of learning design tools and
-            processes](#summary-of-evolution-of-learning-design-tools-and-processes)
-        -   [Discussion: locating the ethos of game template and core
-            tools with other
-            research](#discussion-locating-the-ethos-of-game-template-and-core-tools-with-other-research)
-        -   [Authenticity and Agency in tool
-            used](#authenticity-and-agency-in-tool-used)
-            -   [Increased scaffolding of tools can increase
-                instrumental agency but at what
-                cost?](#increased-scaffolding-of-tools-can-increase-instrumental-agency-but-at-what-cost)
-            -   [The potentially awesome impact of lifting the lid on
-                authentic
-                technologies](#the-potentially-awesome-impact-of-lifting-the-lid-on-authentic-technologies)
-            -   [Remixing, peer learning, and choice of starting
-                template](#remixing-peer-learning-and-choice-of-starting-template)
-        -   [Expressing the key features of this design narrative using
-            the argumentative grammar of
-            3GAT](#expressing-the-key-features-of-this-design-narrative-using-the-argumentative-grammar-of-3gat)
-        -   [Link to next chapter](#link-to-next-chapter)
-            -   [Returning to discussion the emergent and mutual nature
-                of the design and what it has to say about participant
-                agency](#returning-to-discussion-the-emergent-and-mutual-nature-of-the-design-and-what-it-has-to-say-about-participant-agency)
+        -   [On Affordances, DS and DBR (argumentative grammar of 3GAT /
+            DBR)](#on-affordances-ds-and-dbr-argumentative-grammar-of-3gat-dbr)
+            -   [Summary of evolution of learning design tools and
+                processes (specifically in relation to constructionist
+                principles)](#summary-of-evolution-of-learning-design-tools-and-processes-specifically-in-relation-to-constructionist-principles)
+                -   [The potentially awesome impact of lifting the lid
+                    on authentic technologies
+                    -](#the-potentially-awesome-impact-of-lifting-the-lid-on-authentic-technologies--)
+                -   [Comparing to Microworlds & constructionist design
+                    priniciples](#comparing-to-microworlds-constructionist-design-priniciples)
+        -   [**Emergence of GDPs as a germ cell of
+            activity**](#emergence-of-gdps-as-a-germ-cell-of-activity)
+            -   [Synthesis effect of UMC + collection of
+                GDPS](#synthesis-effect-of-umc-collection-of-gdps)
+            -   [and what this synthesis has to say about participant
+                agency
+                -](#and-what-this-synthesis-has-to-say-about-participant-agency--)
+        -   [Link to next chapter/s](#link-to-next-chapters)
     -   [Parking Lot](#parking-lot)
         -   [Developing Digital Literacy skills / Fluency -
             OPERATIONS](#developing-digital-literacy-skills-fluency---operations)
