end section again

--- a/_posts/thesis_chapters/2024-10-5-Design.md
+++ b/_posts/thesis_chapters/2024-10-5-Design.md
@@ -969,6 +969,8 @@ LINK
 This chapter has by focusing on first technical and then more social dimensions of the learning design, (re)surfaced the many barriers to achieving computational fluency via the text coding of a multi-media project. The next section begins by discussing how authentic tools and processes, while challenging for novices, can be addressed using existing of key design principles. It then provides a summary of the designs approach to try to address these tensions in relation to existing research, in particular UMC, half-baked games and  constructionist design principles.
 
 
+In line with discussion of Chapter 3, this process develops a argumentative grammar fusing elements of DBR and CHAT including iterative process, anaysis of emerging tensions between systems elements, focus on affordances and secondary stimuli (particularly in relation to participant agency), and the process of rising to the concrete through exploration of a germ cell concept.
+
 <!-- At some point in this process I realised that I wanted to encourage the growth of computational fluency.
 
 That was not clear, the use of computational thinking also jumped out from a sense of wanting to fit into the common frameworks of this area. But this approach had always seemed too abstract as a form of repertoire to me. More hands on specific repertoires to do with the logistics of more concrete tasks suited the high impact from minimal input approach, made particularly relevant given the difficulty of using a code environment. -->
@@ -995,12 +997,12 @@ In returning to the role of 3GAT concepts in outlining the argumentative grammar
 
 My role to encourage a learning environment which met the following characteristics via changes in learning design has been explored in this chapter via a detailed exploration of tensions arising, changes and inherrent motivations.
 
-
 This can be expressed as revising toolsets to effective mediation practices as an iterative process, aligned with even broad definitions of DBR
 
-These strategies can be seen pedagogy built around a sets of design affordances that fitting a DBR approach,
+These strategies can be seen pedagogy built around a sets of design affordances that fit a DBR approach,
 
-In line with discussion of Chapter 3, this process is augmented by adding argumentative grammar of AT incluing anaysis of emerging tensions between systems elements, focus on double stimulation and its relation to participant agency, and the process of rising to the concrete through exploration of a germ cell concept.
+MOVE / CALLBACK TO CHAPTER 3.
+DBR and affordances explored as networked affordances align with tools not only as technical or perceptual affordnaces but also  mediation using concepts and more social practices or repetoires in CHAT [@barab_curriculum-based_2006].
 
 
 **agency**
@@ -1018,20 +1020,7 @@ Also relational agency developed, supported by playtesting ans social coding pro
 Other tensions were resolved with more fundamental shifts to the overall structure of the activity which can be said to align more closely with the concept of transformative (authorial agency)  agency.
 
 
-#### Summary of evolution of learning design tools and processes (specifically in relation to constructionist principles)
 
-##### The potentially awesome impact of lifting the lid on authentic technologies -
-
-One of the differences is in authenticity...
-
-Aligned with the general principles of PBL [@hung_engaged_2006], this design has strived for authenticity in varied forms. Authenticity in terms of activity object here is multiple in dimension, e.g in audience, in tool use and in creative processes. While the impact of the authentic dimensions of the tools and process described in this chapter 7 in depth, this section outlines some of the rationale of design descriptions in relation to existing research.
-
-
-Lifting the lid on hidden technologies and concepts in hands-on, exploratory processes can be empowering for participants. Ratto explores this via critical making [@ratto_critical_2011], a process which playfully surfaces Latour's [@weibel_making_2005; @latour_cautious_2008] concepts of shifting matters of fact to matters of concern by exposing taken for granted artefacts as objects that have been designed (for better or worse). Conversations between participants showing an inspirational or engaging impact on previously unknown technology. For examples, exchanges among participants that communicated a sense of awe of how much effort and coding must be involved in a professional game based on the relative complexity of the code of their simple game.    
-
-    Pearl: It just shows you what goes into these games.
-    Student Helper 3: Think about how much effort goes into.
-    Pearl: You just take things for granted don’t you?
 
 <!-- MOVE TO CH.7?
 Participants are able to leave the protective harbour by accessing more authentic documentation and moving beyond existing templates. The experience may be involve choppier waters but the tools and processes remain familiar. -->
@@ -1046,7 +1035,14 @@ PERHAPS via some ADDITION TO A TABLE AT THE END OF CHATP#### Different black box
 
 ##### Comparing to Microworlds & constructionist design priniciples
 
+LINK WITH DBR / AFFORDANCES ABOVE
+
+
 The process of modification of the starter template, foregrounding key affordances, together with the restricted tool choice of a code playground and pixel art editor with the authentic, yet scaffolded approach of both tools can be compared to the constructionism-informed design decisions made in creating a Microworld environment.
+
+MOVED INTEGRATE
+While much the focus of much constructionist research  is on the design of toolsets to facilitate to personal knowledge building and expression via open project work, more recent work from researchers in this school has started to embrace the value of situated, community driven production as a lens [@kafai_theory_2020].
+
 
 Many of the design adaptations described in this chapter align with motivations of constructionist design principles explored in the Literature review [@resnick_design_2005]. Techniques or concepts which are embodied in both the Scratch software and the adaptations to the tool set of this intervention include:
 
@@ -1072,10 +1068,22 @@ My design decision to build the toolset as structure on top of authentic tools a
 
 Increased scaffolding of learner resources and tools can increase instrumental agency for novice coders but at the potential cost of reducing access to the tools and processes of authentic creative communities.
 
+#### The potentially awesome impact of lifting the lid on authentic technologies -
+
+One of the differences is in authenticity...
+
+Aligned with the general principles of PBL [@hung_engaged_2006], this design has strived for authenticity in varied forms. Authenticity in terms of activity object here is multiple in dimension, e.g in audience, in tool use and in creative processes. While the impact of the authentic dimensions of the tools and process described in this chapter 7 in depth, this section outlines some of the rationale of design descriptions in relation to existing research.
+
+
+Lifting the lid on hidden technologies and concepts in hands-on, exploratory processes can be empowering for participants. Ratto explores this via critical making [@ratto_critical_2011], a process which playfully surfaces Latour's [@weibel_making_2005; @latour_cautious_2008] concepts of shifting matters of fact to matters of concern by exposing taken for granted artefacts as objects that have been designed (for better or worse). Conversations between participants showing an inspirational or engaging impact on previously unknown technology. For examples, exchanges among participants that communicated a sense of awe of how much effort and coding must be involved in a professional game based on the relative complexity of the code of their simple game.    
+
+    Pearl: It just shows you what goes into these games.
+    Student Helper 3: Think about how much effort goes into.
+    Pearl: You just take things for granted don’t you?
 
 
 
-### **Emergence of GDPs as a germ cell of activity**
+### Rising to the concrete - the emergence of GDPs as a germ cell of activity
 
 The process of rising to the concrete in CHAT is complex, and not seen as a requirement for formative interventions [Sannino etc]. However, viewed as powerful in potential. To try to acheive it, the researcher engages in an exploration of complex, messy concrete processes is undertaken over time to try to discern overarching concerns which can be expressed as a prototypical abstract germ cell concept.
 The resulting utilit of this germ cell is then in its application in different settings, or scopes of activity.
@@ -1123,7 +1131,7 @@ As explored above, the shift in template design from P1 to P2 involved a more st
 
 
 
-####  and what this synthesis has to say about participant  agency -
+####  and what this synthesis has to say about participant  agency - OR MOVE UP?
 
 And this has a knock on effect on the increase use of social coding processes, as the increased instrumental agency can be seen as the base of a triangular hierarchy of agency. One level may  needs to be built on the other.
 
@@ -1146,8 +1154,6 @@ The next chapter explores the varied uses of a gameplay design patterns. In this
 
 
 
-INTEGRATE WITH A PREVIOUS SECTION - SUMMARISE HERE IF NEEDED
-While much the focus of much constructionist research  is on the design of toolsets to facilitate to personal knowledge building and expression via open project work, more recent work from researchers in this school has started to embrace the value of situated, community driven production as a lens [@kafai_theory_2020].
 
 MOVE SOMEWHERE
 One of my central proposals regarding the methodology of this thesis is that while under-explored in this area, there is great potential in collaborative design based approaches to uncover situated and emergent practices in a way that can help seed community activity by other facilitators.
